InstanceKlass::initialize_impl crashes with -XX:-UsePerfData after JDK-8246019

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • None
    • b05
    • Verified

      $ java -XX:-UsePerfData -version
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f8274efdff8, pid=31929, tid=31930
      #
      # JRE version: (16.0) (build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (16-internal+0-adhoc.iklam.open, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x740ff8] InstanceKlass::initialize_impl(Thread*)+0x5b8
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /jdk2/lee/open/src/hotspot/core.31929)
      #
      # An error report file with more information is saved as:
      # /jdk2/lee/open/src/hotspot/hs_err_pid31929.log
      #
      #
      Aborted (core dumped)

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: