8248886: InstanceKlass::initialize_impl crashes with -XX:-UsePerfData after JDK-8246019

Reviewed-by: ccheung